# contest

./: BWT.cpp  BWT.hpp  CMakeLists.txt  Compress.cpp  Compress.hpp  DUMMY.cpp  DUMMY.h  Huffman.cpp  Huffman.hpp  LempelZiv.cpp  LempelZiv.h  LempelZiv.hpp  MTF.cpp  MTF.hpp  RLE.cpp  RLE.hpp  Trees.cpp  main.cpp
